# OceanVoyage

./: .gitignore  AGENTS.md  CMakeLists.txt  DESIGN.md  DEVLOG.md  README.md  VULKAN_REFERENCES.md  claude.md
assets/models/ships/lsv018/: LSV018.mtl
docs/: ARCHITECTURE.md  CODE_CLASSIFICATION.md  ENGINE_TODO.md  MIGRATION_PLAN.md  RENDERING_REFERENCES.md  ROADMAP.md  RUN_CHECKLIST.md
shaders/: chunk.frag  chunk.vert  grass.frag  grass.vert  lighthouse_beam.frag  object.vert  ocean.frag  ocean.vert  ocean_assemble.comp  ocean_buoyancy.comp  ocean_fft.comp  ocean_spectrum.comp  ocean_spectrum_update.comp  ocean_wake.comp  port.frag  port.vert  post.frag  post.vert  shadow.vert  shadow_grass.frag  shadow_grass.vert  shadow_object.vert  shadow_player.vert  shared_constants.h  ship.frag  ship.vert  sky.frag  smaa_blend.frag  smaa_edge.frag  smaa_neighborhood.frag  taa.frag  triangle.frag  triangle.vert  ui.vert
src/: main.cpp
src/game/: Camera.h  GameState.cpp  GameState.h  OceanWorld.cpp  OceanWorld.h  Player.h  VoyageSave.cpp  VoyageSave.h
src/platform/: InputManager.cpp  InputManager.h  Window.cpp  Window.h
src/renderer/: Frustum.h  Types.h  VulkanContext.cpp  VulkanContext.h  VulkanContext_Chunk.cpp  VulkanContext_Frame.cpp  VulkanContext_Init.cpp  VulkanContext_Ocean.cpp  VulkanContext_Private.h
src/world/: Chunk.h  TerrainGen.cpp  TerrainGen.h  World.cpp  World.h
